# c-shell-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/shell/: cmd_parser.c  cmd_parser.h  command.c  command.h  shell.c  shell.h  shell_env.c  shell_env.h
src/util/: io.h  list.c  list.h  str.c  str.h  util.c  util.h  vector.c  vector.h
